// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loader> should render Loader correctly 1`] = `null`;

exports[`<Loader> should render active Loader correctly 1`] = `
.c0 {
  background-color: #ffffff;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  z-index: 99999;
  position: absolute;
  display: block;
  -webkit-animation: eMLfYp 0.15s linear;
  animation: eMLfYp 0.15s linear;
  opacity: 0.8;
}

.c1 {
  outline: none;
  display: block;
  -webkit-animation: eMLfYp 0.15s linear;
  animation: eMLfYp 0.15s linear;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  width: 2.5rem;
  height: 2.5rem;
  display: block;
  z-index: 3;
  border: 0.25rem solid #000000;
  border-top-color: transparent;
  border-radius: 50%;
  -webkit-animation: cVuWGa 0.5s infinite linear;
  animation: cVuWGa 0.5s infinite linear;
}

<div
  aria-label="loader overlay"
  class="c0"
>
  <div
    aria-label="loader animation"
    class="c1"
    tabindex="0"
  />
</div>
`;

exports[`<Loader> should render active fullscreen Loader correctly 1`] = `null`;

exports[`<Loader> should render active inverted Loader correctly 1`] = `
.c0 {
  background-color: #000000;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  z-index: 99999;
  position: absolute;
  display: block;
  -webkit-animation: eMLfYp 0.15s linear;
  animation: eMLfYp 0.15s linear;
  opacity: 0.8;
}

.c1 {
  outline: none;
  display: block;
  -webkit-animation: eMLfYp 0.15s linear;
  animation: eMLfYp 0.15s linear;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  width: 2.5rem;
  height: 2.5rem;
  display: block;
  z-index: 3;
  border: 0.25rem solid #ffffff;
  border-top-color: transparent;
  border-radius: 50%;
  -webkit-animation: cVuWGa 0.5s infinite linear;
  animation: cVuWGa 0.5s infinite linear;
}

<div
  aria-label="loader overlay"
  class="c0"
>
  <div
    aria-label="loader animation"
    class="c1"
    tabindex="0"
  />
</div>
`;

exports[`<Loader> should render active inverted fullscreen Loader correctly 1`] = `null`;

exports[`<Loader> should render fullscren Loader correctly 1`] = `null`;

exports[`<Loader> should render inverted Loader correctly 1`] = `null`;
